# jsonschema2md

./: .pre-commit-config.yaml  .prospector.yaml  README.md  SECURITY.md  pyproject.toml
.github/: renovate.json5
.github/workflows/: audit.yaml  backport.yaml  changelog.yaml  main.yaml  pr-checks.yaml
ci/: requirements.txt
jsonschema2md/: __init__.py
jsonschema2md2/: __init__.py
tests/: test_jsonschema2md.py
