[tool.black]
line-length = 110
target-version = ['py37']

[tool.isort]
profile = "black"

[tool.poetry]
name = "jsonschema2md2"
version = "0.0.0"
description = "Convert JSON Schema to human-readable Markdown documentation"
authors = ["Ralf Gabriels <ralfg@hotmail.be>", "Matt Graham <matthew.m.graham@gmail.com>"]
maintainers = ["Stéphane Brunner <stephane.brunner@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/sbrunner/jsonschema2md2"
keywords = ["JSON Schema", "Markdown", "Converter", "Parser", "Documentation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Documentation",
    "Topic :: Software Development :: Documentation",
]

[tool.poetry.scripts]
jsonschema2md = 'jsonschema2md2:main'

[tool.poetry.dependencies]
python = "^3.7.2"
importlib_metadata = { version = "6.6.0", python = "<3.8" }
PyYAML = "6.0"

[tool.poetry.dev-dependencies]
prospector = { version = "1.10.2", extras = ["with_bandit", "with_mypy", "with_pyroma"] }
pytest = "7.3.1"
pytest-cov = "4.1.0"
pydocstyle = "5.1.1"

[tool.poetry.group.dev.dependencies]
prospector-profile-duplicated = "0.1.0"

[build-system]
requires = [
    "poetry-core>=1.0.0",
    "poetry-dynamic-versioning[plugin]>=0.19.0",
    "poetry-plugin-tweak-dependencies-version",
]
build-backend = "poetry.core.masonry.api"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
pattern = "^(?P<base>\\d+(\\.\\d+)*)"
format-jinja = """
{%- if env.get("VERSION_TYPE") in ("version_branch", "feature_branch") -%}
{{serialize_pep440(bump_version(base, 1 if env.get("IS_MASTER") == "TRUE" else 2), dev=distance)}}
{%- elif distance == 0 -%}
{{serialize_pep440(base)}}
{%- else -%}
{{serialize_pep440(bump_version(base), dev=distance)}}
{%- endif -%}
"""

[tool.poetry-plugin-tweak-dependencies-version]
default = "major"
